fix #1241: registration page readability issue

--- a/stylesheets/options.css
+++ b/stylesheets/options.css
@@ -1131,4 +1131,7 @@ ul.country-list {
       margin: 0;
       text-align: left; }
 
+.intl-tel-input .country-list .country .country-name {
+  color: #000; }
+
 /*# sourceMappingURL=options.css.map */
